# claude-docs-service

./: .env.backup2  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  swarm-workflow.yaml
.claude/: config.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
app/: config.py  database.py  main.py
app/api/: grpc_server.py  rest_routes.py
app/auth/: __init__.py  dependencies.py  jwt_utils.py  middleware.py
app/models/: database.py  document.py
app/services/: document_service.py  event_publisher.py  redis_client.py  virus_scanner.py
app/static/: index.html
app/storage/: base.py  factory.py  s3_backend.py
app/utils/: logging.py  protobuf_converters.py
monitoring/: prometheus.prod.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
nginx/: nginx.conf
proto/docs/v1/: document.proto
reports/: swarm-development-centralized-1751661610011.json
scripts/: generate_protos.sh  init_db.sql  validate_infrastructure.sh
specs/: service.md
tests/: test_document_service.py  test_grpc_server.py  test_protobuf_converters.py
tests/integration/: test_database_integration.py  test_document_workflow.py  test_redis_integration.py
tests/performance/: load_test.js
tests/unit/: test_auth.py  test_config.py  test_database.py  test_database_models.py  test_event_publisher.py  test_logging.py  test_main.py  test_redis_client.py  test_rest_routes.py  test_storage_backends.py  test_virus_scanner.py
